# nn-from-scratch

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  ErrorFunctions.cpp  ErrorFunctions.h  Neuron.cpp  Neuron.h
tests/: CMakeLists.txt  ErrorFunctionsTest.cpp  NeuronTest.cpp
